==2013-09-29==
* We now throw more OlapExceptions in Linked Data Engines (Sesame), since we hope that this
makes the system more robust in case of errors.
* A prepared olap statement is used by XmlaHandler.java 
(statement = connection.prepareOlapStatement(mdx);). Afterwards the cellset is 
created (cellSet = statement.executeQuery();). This means in our implementation, that the cellset
is populated twice and the linked data engine is queried twice (and logging is done, twice). Thus,
we have adapted cellset to only populate the cells when actually cells are asked for; otherwise, only
the metadata is created and can be queried from the prepared olap statement if necessary.
* Unfortunately, the prepared statement does not help us in any way to save resources. Therefore, we
have disabled it in Olap4ldPreparedStatement.java. 

==2013-09-28==
* More detailed logging, per connection. Unfortunately, no session tracking, yet.
* Better labels for SSB dataset

==2013-09-27==
* TODO: 
** Better understanding for users. Unfortunately, currently there is a JavaScript error in LDCX.
** Even more robustness? 
*** Currently, if I cannot store any more in the triple store, I just throw an error. After reload, a new triple store should be filled?
*** If a query is too big, java script LDCX currently does not complain, can be improved?
*** According to Günter und Daniel, asking for the amount of free memory is not a best practice. 
Instead 1) I should properly test the system and see whether there are errors 2) I should put user
restrictions on the system, e.g., you cannot analyze datasets with such and such amount of triples.
**** Added triple count check and magic number 100,000 triples max.

** LDCX pivot visualisation often wrong (first column, if we use several dimensions on rows?)

==2013-09-26==
* Why does Edgar example dataset does not fulfill constraint 12? [http://www.w3.org/2011/gld/validator/qb/qb-test?upload=upload-2013-09-25T20-51-51-104] 