@@ -1,6 +1,6 @@
 handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
 java.util.logging.FileHandler.level=INFO
